[UI] Create job and list (WIP)

--- a/.env
+++ b/.env
@@ -1,14 +1,13 @@
-# 项目相关配置
-# 如果仅需在本地临时覆盖配置，请使用 .env.local 文件名，这个文件不会被 Git 提交
-
-# 请注意：只有以 REACT_APP_ 开头的变量才能通过 process.env 来访问
-# 修改此文件后，重新编译后才会生效
-
-# 本地运行端口
 PORT = 3000
 
-# 打包输出目录
 BUILD_PATH = dist
 
-# axios 的 baseURL
 REACT_APP_API_BASE_URL = /api
+
+REACT_APP_API_KEY=AIzaSyBpxs_jJhH8Zggtsa7jTEWlDgrcYxfKYzE
+REACT_APP_AUTH_DOMAIN=freelance-platform-d20fe.firebaseapp.com
+REACT_APP_PROJECT_ID=freelance-platform-d20fe
+REACT_APP_STORAGE_BUCKET=freelance-platform-d20fe.appspot.com
+REACT_APP_MESSAGING_SENDER_ID=885687438581
+REACT_APP_APP_ID=1:885687438581:web:c25ae0aab7609bbbafc9bc
+REACT_APP_MEASUREMENT_ID=G-D159B8LHQW
