--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "clsx": "^2.1.1",
     "customize-cra": "^1.0.0",
     "date-fns": "^2.30.0",
+    "firebase": "^10.12.4",
+    "formik": "^2.4.6",
     "less": "^4.2.0",
     "less-loader": "^11.1.4",
     "lodash": "^4.17.21",
@@ -36,6 +38,7 @@
     "swr": "^2.2.5",
     "tailwindcss": "^3.4.6",
     "typescript": "^4.9.5",
+    "yup": "^1.4.0",
     "zustand": "^4.5.4"
   },
   "scripts": {
