update validation and about field

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "@mui/x-date-pickers": "^5.0.20",
+    "@tiptap/react": "^2.5.8",
+    "@tiptap/starter-kit": "^2.5.8",
     "ahooks": "^3.8.0",
     "axios": "^1.7.2",
     "babel-plugin-import": "^1.13.8",
@@ -24,6 +26,7 @@
     "less": "^4.2.0",
     "less-loader": "^11.1.4",
     "lodash": "^4.17.21",
+    "mui-tiptap": "^1.9.5",
     "notistack": "^3.0.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "^18.3.1",
